# kaggle-eedi

./: .env.example  .gitignore  01_just_embedding.py  02_colbert.py  README.md  bge_data_prep.py  bge_validate.py  check_bge_token_distr.ipynb  eda.ipynb  lambdalabs.md  mix.ipynb  my_datasets.py  paraphrase.py  play.ipynb  pyproject.toml  requirements.txt  train_sts.ipynb  train_sts_hn.py  usearch_play.ipynb  utils.py
eedi/: callbacks.py  colbert.py  datasets.py  generate_synthetic.py  helpers.py  infer_top25.py  infer_top25_ensemble.py  infer_top25_pros.py  losses.py  metrics.py  my_datasets.py  my_datasets_from_future.py  paraphrase.py  train_sts_hn.py  trainer.py  utils.py  vllm_infer.py
notebooks/: check_token_dist.ipynb  dspy_check.ipynb  eda.ipynb  gpu_check.ipynb  infer25.ipynb  loader.ipynb  peft_try.ipynb  pros_replicate.ipynb  sfr.ipynb  sft_meta.ipynb  synthetic.ipynb  train_sts.ipynb  usearch_play.ipynb  vllm_play.ipynb
scripts/: .tmux.conf  download_data.sh  download_paraphrased_data.sh  download_synthetic_data.sh  finetune_bge.sh  infer.sh  telegram.sh  train.sh
tests/: test_late_interaction.py
