[project]
name = "kaggle-eedi"
version = "0.0.1"
dependencies = [
    "pandas==2.2.3",
    "numpy==2.1.1",
    "kaggle==1.6.17",
    "ipython==8.27.0",
    "ipykernel==6.29.5",
    "seaborn==0.13.2",
    "matplotlib==3.9.2",
    "torch==2.4.1",
    "transformers==4.45.2",
    "accelerate==1.0.1",
    "sentence-transformers==3.2.0",
]

[tool.setuptools]
py-modules = [] # we are not shipping anything for pypi

[tool.ruff]
target-version = "py311"
