[project]
name = "kaggle-eedi"
version = "0.0.1"
dependencies = [
    "pandas==2.2.3",
    "numpy",
    "kaggle==1.6.17",
    "ipython==8.27.0",
    "ipykernel==6.29.5",
    "ipywidgets==8.1.5",
    "seaborn==0.13.2",
    "matplotlib==3.9.2",
    "torch==2.4.1",
    "transformers==4.45.2",
    "accelerate==1.0.1",
    "peft==0.13.2",
    "sentence-transformers==3.2.0",
    "FlagEmbedding==1.2.11",
    "faiss-gpu-cu12==1.9.0",
    "scikit-learn==1.5.2",
    "python-dotenv==1.0.1",
    "openai==1.53.0",
    "wandb==0.18.7",
]

[tool.setuptools]
packages = ["eedi"]

[tool.ruff]
target-version = "py311"
